2020-08-12 Alibaba Cloud.
	* version: 2.4.10
	* IMPROVE: modify the logic of transaction merging in change stream mode
	to improve synchronization performance. #370

2020-08-06 Alibaba Cloud.
	* version: 2.4.9
	* BUGFIX: checkpoint doesn't work after restart. #403
	* IMPROVE: mandatory set read concern to majority for change stream. #406
	* BUGFIX: filter checkpoint.storage.db, not only mongoshake.

2020-07-29 Alibaba Cloud.
	* version: 2.4.8
	* BUGFIX: fix bug that checkpoint.storage.db does not work since v2.4.6.
	* BUGFIX: fix bug of orphan document filter core. #389.
	* IMPROVE: remove listDatabase request when incr_sync.shard_key != auto.
	#385.
	* IMPROVE: add oplog_max_size and oplog_avg_size metric in restful: "repl/".
	* BUGFIX: fix bug of checkpoint duplicate updating when HA switch.
	* IMPROVE: increase syncer thread when fetching method is change stream.
	* IMPROVE: add readConcern and writeConcern in client to solve the
	orphan document problem reading from MongoS. #392
	* IMPROVE: fix wrong name usage in mongoshake-stat script, thanks @Neal
	Gosalia. #393.

2020-06-30 Alibaba Cloud.
	* version: 2.4.7
	* IMPROVE: add exit-point and safe shutdown mechanism. #375, #162
	* IMPROVE: add UpdateLookup options in change stream. #350. thanks for
	the PR by Raydy.
	* IMPROVE: open full_sync.reader.read_document_count parameter to improve
	full sync performance when meeting jumbo table.
	* IMPROVE: polish log: remove function information in log.

2020-06-17 Alibaba Cloud.
	* version: 2.4.6
	* IMPROVE: when running full sync, change sync source from mongod to
	mongos. #360
	* IMPROVE: when source type is sharding, change checkpoint position from
	config-server to mongos.
	* BUGFIX: fix bug of whether the starting time oplog is legal: the oldest
	oplog timestamp > checkpoint.start_position
	* IMPROVE: convert kafka producer MaxMessageBytes configuration from 1MB
	to 16MB. #369.
	* IMPROVE: add target delay parameter just like MongoDB primary-secondary