@@ -175,8 +175,10 @@ full_sync.reader.write_document_parallel = 8
 # 目的端写入的batch大小，例如，128表示一个线程将会一次聚合128个文档然后再写入。
 full_sync.reader.document_batch_size = 128
 # number of documents reading in single reader thread.
+# do not enable when the _id has more than one type: e.g., ObjectId, string.
 # 用于单表倾斜的优化，单个拉取线程读取的最多的文档数，默认0表示拉取是单线程拉取，非0情况下必须>=10000。
 # 例如，表内有50000文档，设置10000则读取段拉取为5个线程（建议并发在1-32个线程）。
+# 注意：对单个表来说，仅支持_id对应的value是同种类型，如果有不同类型请勿启用该配置项！
 full_sync.reader.read_document_count = 0
 
 # drop the same name of collection in dest mongodb in full synchronization
