@@ -324,7 +324,9 @@ func checkConflict() error {
 	/*****************************3. incr sync******************************/
 	// set incr_sync.worker = shards number if source is sharding
 	if len(conf.Options.MongoUrls) > 1 {
-		if conf.Options.IncrSyncWorker != len(conf.Options.MongoUrls) {
+		if conf.Options.IncrSyncWorker != len(conf.Options.MongoUrls) &&
+			conf.Options.IncrSyncMongoFetchMethod == utils.VarIncrSyncMongoFetchMethodOplog {
+			// only change when incr_sync.mongo_fetch_method = oplog
 			conf.Options.IncrSyncWorker = len(conf.Options.MongoUrls)
 		}
 		if conf.Options.FilterDDLEnable == true &&
